Enhanced UI: feature highlights, professional messaging, auto-hide navbar

--- a/index.html
+++ b/index.html
@@ -23,12 +23,26 @@
 
     <section id="home" class="hero">
         <div class="hero-content">
-            <div class="hero-badge">✨ AI-Powered Oracle</div>
-            <h1 class="glitch" data-text="Forge Your Billion Dollar Idea">Forge Your Billion Dollar Idea</h1>
-            <p class="typewriter">Unleash the power of AI to decode market secrets, predict trends, and discover hidden goldmines before your competitors do.</p>
+            <div class="hero-badge">✨ AI-Powered Business Intelligence</div>
+            <h1 class="glitch" data-text="Transform Ideas Into Success">Transform Ideas Into Success</h1>
+            <p class="typewriter">Harness cutting-edge AI to analyze market opportunities, validate business concepts, and unlock profitable ventures with data-driven insights.</p>
+            <div class="hero-features">
+                <div class="feature-item">
+                    <div class="feature-icon">🎯</div>
+                    <span>Market Analysis</span>
+                </div>
+                <div class="feature-item">
+                    <div class="feature-icon">⚡</div>
+                    <span>Instant Validation</span>
+                </div>
+                <div class="feature-item">
+                    <div class="feature-icon">📈</div>
+                    <span>Growth Insights</span>
+                </div>
+            </div>
             <div class="cta-container">
-                <button class="cta-btn pulse-btn" onclick="scrollToOracle()">🔮 Consult Oracle</button>
-                <button class="cta-btn-secondary" onclick="scrollToPulse()">📊 Market Pulse</button>
+                <button class="cta-btn pulse-btn" onclick="scrollToOracle()">🚀 Validate My Idea</button>
+                <button class="cta-btn-secondary" onclick="scrollToPulse()">📊 Explore Trends</button>
             </div>
 
         </div>
@@ -37,13 +51,13 @@
     <section id="oracle" class="oracle-section">
         <div class="container">
             <div class="section-header">
-                <h2 class="neon-text">🔮 The Oracle Speaks</h2>
-                <p class="section-subtitle">Channel the wisdom of AI to unveil your idea's destiny</p>
+                <h2 class="neon-text">🤖 AI Business Analysis</h2>
+                <p class="section-subtitle">Get comprehensive market intelligence and strategic insights</p>
             </div>
             <div class="oracle-form">
                 <div class="input-group">
-                    <label class="input-label">💭 Describe Your Vision</label>
-                    <textarea id="ideaInput" placeholder="Paint your startup dream in vivid detail..."></textarea>
+                    <label class="input-label">💡 Describe Your Business Idea</label>
+                    <textarea id="ideaInput" placeholder="Describe your startup concept, target market, and unique value proposition..."></textarea>
                 </div>
                 <div class="form-row">
                     <div class="input-group">
@@ -61,7 +75,7 @@
 
                 </div>
                 <button id="validateBtn" class="oracle-btn" onclick="validateIdea()">
-                    <span class="btn-text">🔮 Consult Oracle</span>
+                    <span class="btn-text">🚀 Analyze Business Potential</span>
                     <div class="btn-particles"></div>
                 </button>
             </div>
@@ -101,7 +115,7 @@
                     </div>
                 </div>
                 <div class="oracle-guidance">
-                    <h4>🌟 Sacred Guidance</h4>
+                    <h4>💡 Strategic Recommendations</h4>
                     <div class="guidance-list" id="guidanceList"></div>
                 </div>
             </div>
